implemented draft-selected-option(s)

--- a/avBooth/drafts-election-screen-directive/drafts-election-screen-directive.html
+++ b/avBooth/drafts-election-screen-directive/drafts-election-screen-directive.html
@@ -85,7 +85,16 @@
         class="col-xs-12 col-sm-6 padded"
         ng-class="{hidden: stateData.affixIsSet && !stateData.affixDropDownShown, affixedSelection: stateData.affixIsSet}">
         <h4 class="text-brand-success padded-left" ng-i18next="[i18next]({count: numSelectedOptions()})avBooth.questionSelectedOptionsTitle"></h3>
-        <!-- TODO: show here selected options -->
+        <avb-draft-selected-option
+          ng-repeat="option in flatOptions | avbSelectedOptions"
+          class="animate-repeat"
+          ng-class="{selected: option.selected > -1}">
+        </avb-draft-selected-option>
+        <div
+          class="padded"
+          ng-if="(flatOptions | avbSelectedOptions).length == 0"
+          ng-i18next="avBooth.noOptionsSelected">
+        </div>
       </div>
     </div>
 
