adding tags when draft-options are outside categories

--- a/avBooth/draft-option-directive/draft-option-directive.html
+++ b/avBooth/draft-option-directive/draft-option-directive.html
@@ -8,6 +8,7 @@
       <span ng-i18next="avBooth.removeSelectedItem"></span>
       <span class="glyphicon glyphicon-remove"></span>
     </div>
+    <span class="label label-default" ng-i18next="avBooth.packLabel"></span>
     <p class="details">{{option.details}}</p>
   </div>
   <button
@@ -44,6 +45,9 @@
       <span ng-i18next="avBooth.removeSelectedItem"></span>
       <span class="glyphicon glyphicon-remove"></span>
     </div>
+    <span class="label label-default">
+      {{option.category}}
+    </span>
     <p class="details">{{option.details}}</p>
   </div>
   <a
