--- a/avBooth/draft-selected-option-directive/draft-selected-option-directive.html
+++ b/avBooth/draft-selected-option-directive/draft-selected-option-directive.html
@@ -8,6 +8,7 @@
       <span ng-i18next="avBooth.removeSelectedItem"></span>
       <span class="glyphicon glyphicon-remove"></span>
     </div>
+    <span class="label label-default" ng-i18next="avBooth.packLabel"></span>
     <p class="details">{{option.details}}</p>
   </div>
   <button
@@ -34,7 +35,7 @@
     </a>
   </div>
 </div>
-<div ng-if="!option.isPack">
+<div ng-if="!option.isPack" class="filter-active">
   <div
     class="opt-data"
     ng-click="toggleSelectItem(option)">
@@ -44,6 +45,9 @@
       <span ng-i18next="avBooth.removeSelectedItem"></span>
       <span class="glyphicon glyphicon-remove"></span>
     </div>
+    <span class="label label-default">
+      {{option.category}}
+    </span>
     <p class="details">{{option.details}}</p>
   </div>
   <a
