fix selection in mobile version for drafts election screen

--- a/avBooth/drafts-election-screen-directive/drafts-election-screen-directive.html
+++ b/avBooth/drafts-election-screen-directive/drafts-election-screen-directive.html
@@ -76,7 +76,8 @@
             />
           <span class="glyphicon glyphicon-search"></span>
         </div>
-        <avb-draft-options>
+        <avb-draft-options
+          ng-class="{hidden: stateData.affixIsSet && stateData.affixDropDownShown}">
         </avb-draft-options>
       </div>
 
