Add IE9 console workaround

--- a/index.html
+++ b/index.html
@@ -115,6 +115,9 @@
   <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
   <script src="ie10-viewport-bug-workaround.js"></script>
   
+  <!-- IE9 console workaround -->
+  <script src="ie9-console-workaround.js"></script>
+  
   <!-- Add New Component JS Above -->
 
   <div>
