--- a/index.html
+++ b/index.html
@@ -1,30 +1,13 @@
 <!DOCTYPE html>
 <html ng-app="agora-core-view">
-<head>
-  <title></title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<meta charset="utf-8" />
-  <link href="app.less" type="text/css" rel="stylesheet/less" />
-</head>
+  <head>
+    <title></title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="utf-8" />
+    <link href="app.less" type="text/css" rel="stylesheet/less" />
+    <link href="avb-start-loading.css" rel="stylesheet" type="text/css">
+  </head>
 <body>
-  <style type="text/css">
-  .avb-start-loading {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    margin-top: -30px;
-    margin-left: -30px;
-    width: 60px;
-    height: 60px;
-    border-radius: 7px;
-    background-image: url('img/loading.gif');
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-position: center center;
-    background-color: #009CDF;
-  }
-  </style>
-
   <!-- Livereload script for development only (stripped during dist build) -->
   <script src="http://localhost:35729/livereload.js"></script>
 
