Fix jQuery errors on IE 8, add html tag id attribute for IE 8

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html ng-app="agora-core-view">
+<html id="ng-app" ng-app="agora-core-view">
   <head>
     <title></title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="utf-8" />
     <link href="app.less" type="text/css" rel="stylesheet/less" />
-    <link href="avb-start-loading.css" rel="stylesheet" type="text/css">
+    <link href="avb-start-loading.css" rel="stylesheet" type="text/css" />
   </head>
 <body>
   <!-- Livereload script for development only (stripped during dist build) -->
@@ -13,7 +13,16 @@
 
   <!-- JS from Bower Components -->
   <script src="bower_components/less.js/dist/less-1.6.2.js"></script>
-  <script src="bower_components/jquery/jquery.js" class="lib"></script>
+   <!-- jQuery 2.0 doesn't support IE 6/7/8 -->
+  <!--[if lte IE 8]>
+    <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+  <![endif]-->
+  <!--[if gt IE 9]>
+    <script src="bower_components/jquery/jquery.js" class="lib"></script>
+  <![endif]-->
+  <![if !IE]>
+    <script src="bower_components/jquery/jquery.js" class="lib"></script>
+  <![endif]>
   <script src="bower_components/bootstrap/dist/js/bootstrap.js" class="lib"></script>
   <script src="bower_components/underscore/underscore.js" class="lib"></script>
   <script src="bower_components/angular/angular.js" class="lib"></script>
