fix conditional comments

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
   <!--[if gt IE 9]>
     <script src="bower_components/jquery/jquery.js" class="lib"></script>
   <![endif]-->
-  <![if !IE]>
+  <!--[if !IE] -->
     <script src="bower_components/jquery/jquery.js" class="lib"></script>
-  <![endif]>
+  <!-- [endif]-->
   <script src="bower_components/bootstrap/dist/js/bootstrap.js" class="lib"></script>
   <script src="bower_components/underscore/underscore.js" class="lib"></script>
   <script src="bower_components/angular/angular.js" class="lib"></script>
