include each file only once

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
   <![endif]-->
   <!--[if gt IE 9]>
-    <script src="bower_components/jquery/jquery.js" class="lib"></script>
+    <script src="bower_components/jquery/jquery.js"></script>
   <![endif]-->
   <!--[if !IE] -->
     <script src="bower_components/jquery/jquery.js" class="lib"></script>
