working on IE support

--- a/index.html
+++ b/index.html
@@ -13,16 +13,7 @@
 
   <!-- JS from Bower Components -->
   <script src="bower_components/less.js/dist/less-1.6.2.js"></script>
-   <!-- jQuery 2.0 doesn't support IE 6/7/8 -->
-  <!--[if lte IE 8]>
-    <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-  <![endif]-->
-  <!--[if gt IE 9]>
-    <script src="bower_components/jquery/jquery.js"></script>
-  <![endif]-->
-  <!--[if !IE] -->
-    <script src="bower_components/jquery/jquery.js" class="lib"></script>
-  <!-- [endif]-->
+  <script src="bower_components/jquery/jquery.js" class="libnocompat"></script>
   <script src="bower_components/bootstrap/dist/js/bootstrap.js" class="lib"></script>
   <script src="bower_components/underscore/underscore.js" class="lib"></script>
   <script src="bower_components/angular/angular.js" class="lib"></script>
