IE8 bind workaround added (needed for less)

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
   <!-- Livereload script for development only (stripped during dist build) -->
   <script src="http://localhost:35729/livereload.js"></script>
 
+  <!-- IE8 bind workaround (needed for less) -->
+  <script src="ie8-bind-workaround.js"></script>
+  
   <!-- JS from Bower Components -->
   <script src="bower_components/less.js/dist/less-1.6.2.js"></script>
   <script src="bower_components/jquery/jquery.js" class="libnocompat"></script>
@@ -100,6 +103,8 @@
   
   <!-- IE9 console workaround -->
   <script src="ie9-console-workaround.js"></script>
+  
+
   
   <!-- Add New Component JS Above -->
 
