--- a/avBooth/booth.html
+++ b/avBooth/booth.html
@@ -1,5 +1,6 @@
 <av-booth
   election-url="{{baseUrl}}election/{{electionId}}/config/{{voterId}}"
+  pub-keys-url="{{baseUrl}}election/{{electionId}}/pubkeys"
   cast-ballot-url="{{baseUrl}}election/{{electionId}}/vote/{{voterId}}"
   authorization-header="{{hmacMessage}}:{{hmacHash}}"
   config="{{config}}"
