--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html id="ng-app" ng-app="agora-core-view">
   <head>
     <title></title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta charset="utf-8" />
     <link href="app.less" type="text/css" rel="stylesheet/less" />
     <link href="avb-start-loading.css" rel="stylesheet" type="text/css" />
