adding compatibility tags for IE8

--- a/index.html
+++ b/index.html
@@ -8,6 +8,52 @@
     <link href="avb-start-loading.css" rel="stylesheet" type="text/css" />
   </head>
 <body>
+  <!--[if lte IE 8]>
+    <script>
+      document.createElement('avb-accordion-option');
+      document.createElement('avb-accordion-options');
+      document.createElement('avb-accordion-selected-option');
+      document.createElement('avb-available-options');
+      document.createElement('avb-booth');
+      document.createElement('avb-busy');
+      document.createElement('avb-casting-ballot-screen');
+      document.createElement('avb-draft-option');
+      document.createElement('avb-draft-options');
+      document.createElement('avb-draft-selected-option');
+      document.createElement('avb-drafts-election-screen');
+      document.createElement('avb-error-screen');
+      document.createElement('avb-help-screen');
+      document.createElement('avb-multi-question');
+      document.createElement('avb-review-ballot');
+      document.createElement('avb-review-screen');
+      document.createElement('avb-selected-options');
+      document.createElement('avb-simple-option');
+      document.createElement('avb-start-screen');
+      document.createElement('avb-success-screen');
+
+      // Optionally these for CSS
+      document.createElement('avb:accordion-option');
+      document.createElement('avb:accordion-options');
+      document.createElement('avb:accordion-selected-option');
+      document.createElement('avb:available-options');
+      document.createElement('avb:booth');
+      document.createElement('avb:busy');
+      document.createElement('avb:casting-ballot-screen');
+      document.createElement('avb:draft-option');
+      document.createElement('avb:draft-options');
+      document.createElement('avb:draft-selected-option');
+      document.createElement('avb:drafts-election-screen');
+      document.createElement('avb:error-screen');
+      document.createElement('avb:help-screen');
+      document.createElement('avb:multi-question');
+      document.createElement('avb:review-ballot');
+      document.createElement('avb:review-screen');
+      document.createElement('avb:selected-options');
+      document.createElement('avb:simple-option');
+      document.createElement('avb:start-screen');
+      document.createElement('avb:success-screen');
+    </script>
+  <![endif]-->
   <!-- Livereload script for development only (stripped during dist build) -->
   <script src="http://localhost:35729/livereload.js"></script>
 
