--- a/avBooth/review-screen-directive/review-screen-directive.html
+++ b/avBooth/review-screen-directive/review-screen-directive.html
@@ -32,7 +32,7 @@
   <div class="container">
     <div class="row">
       <div class="col-xs-12">
-        <avb-review-ballot></avb-review-ballot>
+        <div avb-review-ballot></div>
       </div>
     </div>
     <div class="row hidden" ng-cloak av-affix-bottom data-force-affix-width="768">
