--- a/avBooth/available-options-directive/available-options-directive.html
+++ b/avBooth/available-options-directive/available-options-directive.html
@@ -1,10 +1,10 @@
 <div class="col-xs-12" ng-if="layout === 'simple'">
-  <avb-simple-option
+  <div avb-simple-option
     ng-repeat="option in filteredOptions"
     class="animate-repeat"
     ng-class="{selected: option.selected > -1}"
     ng-click="toggleSelectItem(option)">
-  </avb-simple-option>
+  </div>
   <div
     class="animate-repeat padded-left"
     ng-if="filteredOptions.length == 0"
@@ -12,6 +12,6 @@
   </div>
 </div>
 <div class="col-xs-12" ng-if="layout === 'accordion'">
-  <avb-accordion-options>
-  </avb-accordion-options>
+  <div avb-accordion-options>
+  </div>
 </div>
