--- a/avBooth/booth.html
+++ b/avBooth/booth.html
@@ -1,8 +1,8 @@
-<av-booth
+<div av-booth
   election-url="{{baseUrl}}election/{{electionId}}/config/{{voterId}}"
   pub-keys-url="{{baseUrl}}election/{{electionId}}/pubkeys"
   cast-ballot-url="{{baseUrl}}election/{{electionId}}/vote/{{voterId}}"
   authorization-header="{{hmacMessage}}:{{hmacHash}}"
   config="{{config}}"
   pre-check="checkElectionUrl()">
-</av-booth>
+</div>
