--- a/avBooth/selected-options-directive/selected-options-directive.html
+++ b/avBooth/selected-options-directive/selected-options-directive.html
@@ -1,10 +1,10 @@
 <div class="col-xs-12" ng-if="layout === 'simple'">
-  <avb-simple-selected-option
+  <div avb-simple-selected-option
     ng-repeat="option in options | avbSelectedOptions"
     class="animate-repeat"
     ng-class="{selected: option.selected > -1}"
     ng-click="toggleSelectItem(option)">
-  </avb-simple-selected-option>
+  </div>
   <div
     class="padded"
     ng-if="(options | avbSelectedOptions).length == 0"
@@ -12,11 +12,11 @@
   </div>
 </div>
 <div class="col-xs-12" ng-if="layout === 'accordion'">
-  <avb-accordion-selected-option
+  <div avb-accordion-selected-option
     ng-repeat="option in options | avbSelectedOptions"
     class="animate-repeat"
     ng-class="{selected: option.selected > -1}">
-  </avb-accordion-selected-option>
+  </div>
   <div
     class="padded"
     ng-if="(options | avbSelectedOptions).length == 0"
