--- a/avBooth/multi-question-directive/multi-question-directive.html
+++ b/avBooth/multi-question-directive/multi-question-directive.html
@@ -83,7 +83,7 @@
           options="stateData.question.answers"
           filter="{{stateData.filter}}"
           ng-class="{hidden: stateData.affixIsSet && stateData.affixDropDownShown}">
-        <div avb-available-options>
+        </div>
       </div>
 
       <!-- show selected options -->
@@ -97,7 +97,7 @@
           min="stateData.question.min"
           sorted="true"
           options="stateData.question.answers">
-        <div avb-selected-options>
+        </div>
       </div>
     </div>
 
