adding your selected options are text to review ballot

--- a/avBooth/review-ballot-directive/review-ballot-directive.html
+++ b/avBooth/review-ballot-directive/review-ballot-directive.html
@@ -8,6 +8,7 @@
       <span class="glyphicon glyphicon-edit"></span>
     </div>
   </h3>
+  <p ng-i18next="avBooth.selectedOptionsFollow"></p>
   <ul>
     <li
       ng-repeat="answer in question.answers | avbSelectedOptions"
