showing TOS in start screen if available

--- a/avBooth/start-screen-directive/start-screen-directive.html
+++ b/avBooth/start-screen-directive/start-screen-directive.html
@@ -49,6 +49,12 @@
         <p ng-i18next="avBooth.encryptAndEmitBallotText"></p>
       </div>
     </div>
+    <div class="row" ng-if="tosTitle.length > 0">
+      <div class="padded col-xs-12">
+        <h4>{{tosTitle}}</h4>
+        <div ng-bind-html="tosText"></div>
+      </div>
+    </div>
     <div class="row hidden" ng-cloak av-affix-bottom data-force-affix-width="768">
       <button
         class="btn btn-block btn-lg btn-success btn-plain"
