--- a/avBooth/drafts-election-screen-directive/drafts-election-screen-directive.html
+++ b/avBooth/drafts-election-screen-directive/drafts-election-screen-directive.html
@@ -17,7 +17,7 @@
 </nav>
 
 <div class="wrapper-unfixed">
-  <div class="navbar-unfixed-top text-center" av-collapsing=".unfixed-top-height" data-toggle-selector="avb-drafts-election-screen #avb-toggle">
+  <div class="navbar-unfixed-top text-center" av-collapsing=".unfixed-top-height" data-toggle-selector="[avb-drafts-election-screen] #avb-toggle">
     <div class="container">
       <div class="hidden unfixed-top-height"></div>
       <h1>{{election.pretty_name}}</h1>
