--- a/avBooth/help-screen-directive/help-screen-directive.html
+++ b/avBooth/help-screen-directive/help-screen-directive.html
@@ -13,7 +13,7 @@
 </nav>
 
 <div class="wrapper-unfixed">
-  <div class="navbar-unfixed-top text-center" av-collapsing=".unfixed-top-height" data-toggle-selector="avb-help-screen #avb-toggle">
+  <div class="navbar-unfixed-top text-center" av-collapsing=".unfixed-top-height" data-toggle-selector="[avb-help-screen] #avb-toggle">
     <div class="container">
       <div class="hidden unfixed-top-height"></div>
       <h1 ng-i18next="avBooth.helpTitle"></h1>
