--- a/avBooth/multi-question-directive/multi-question-directive.html
+++ b/avBooth/multi-question-directive/multi-question-directive.html
@@ -17,7 +17,7 @@
 </nav>
 
 <div class="wrapper-unfixed">
-  <div class="navbar-unfixed-top text-center" av-collapsing=".unfixed-top-height" data-toggle-selector="avb-multi-question #avb-toggle">
+  <div class="navbar-unfixed-top text-center" av-collapsing=".unfixed-top-height" data-toggle-selector="[avb-multi-question] #avb-toggle">
     <div class="container">
       <div class="hidden unfixed-top-height"></div>
       <h1>{{stateData.question.question}}</h1>
