--- a/avBooth/success-screen-directive/success-screen-directive.html
+++ b/avBooth/success-screen-directive/success-screen-directive.html
@@ -6,7 +6,7 @@
 </nav>
 
 <div class="wrapper-unfixed">
-  <div class="navbar-unfixed-top text-center" av-collapsing=".unfixed-top-height" data-toggle-selector="avb-multi-question #avb-toggle">
+  <div class="navbar-unfixed-top text-center" av-collapsing=".unfixed-top-height" data-toggle-selector="[avb-success-screen] #avb-toggle">
     <div class="container">
       <div class="hidden unfixed-top-height"></div>
       <h1 ng-i18next="avBooth.successTitle"></h1>
