--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
   <script src="vendor/crypto/sha2.js" class="lib"></script>
   <script src="vendor/crypto/sjcl.js" class="lib"></script>
   <script src="vendor/jquery.nanoscroller/nanoscroller.js" class="lib"></script>
+  <script src="vendor/jquery.actual/jquery.actual.js" class="lib"></script>
   <!-- Add New Vendor Component JS Above -->
 
   <!-- Configuration file JS -->
