--- a/avBooth/accordion-selected-option-directive/accordion-selected-option-directive.html
+++ b/avBooth/accordion-selected-option-directive/accordion-selected-option-directive.html
@@ -6,6 +6,9 @@
     <span ng-i18next="avBooth.removeSelectedItem"></span>
     <span class="glyphicon glyphicon-remove"></span>
   </div>
+  <span class="label label-default">
+    {{option.category}}
+  </span>
   <p class="details">{{option.details}}</p>
 </div>
 <a
