--- a/avBooth/drafts-election-screen-directive/drafts-election-screen-directive.html
+++ b/avBooth/drafts-election-screen-directive/drafts-election-screen-directive.html
@@ -84,7 +84,7 @@
       <!-- show selected options -->
       <div
         class="col-xs-12 col-sm-6 padded hidden-xs"
-        ng-class="{hidden: stateData.affixIsSet && !stateData.affixDropDownShown, affixedSelection: stateData.affixIsSet}">
+        ng-class="{hidden: windowWidth < 768 && !stateData.affixDropDownShown, affixedSelection: windowWidth < 768 && stateData.affixIsSet}">
         <h4 class="text-brand-success padded-left" ng-i18next="[i18next]({count: numSelectedOptions()})avBooth.questionSelectedOptionsTitle"></h4>
         <div avb-draft-selected-option
           ng-repeat="option in flatOptions | avbSelectedOptions"
