adding better error reporting

--- a/avBooth/error-screen-directive/error-screen-directive.html
+++ b/avBooth/error-screen-directive/error-screen-directive.html
@@ -21,7 +21,7 @@
 <div class="content avb-content">
   <div class="container">
     <p>{{statusData.error}}</p>
-    <span ng-i18next="[html:i18next]({email: config.contact.email, error: stateData.error})avBooth.errorHtml">
+    <span ng-i18next="[html:i18next]({email: config.contact.email, error: stateData.error, errorId: errorId})avBooth.errorHtml">
     </span>
   </div>
 </div>
