working on the drafts, now we have affixed table headers and some css worked out

--- a/avBooth/draft-option-directive/draft-option-directive.html
+++ b/avBooth/draft-option-directive/draft-option-directive.html
@@ -1,4 +1,4 @@
-<div ng-if="option.isPack">
+<div ng-if="option.isPack" class="col-xs-12 col-md-6">
   <div
     class="opt-data"
     ng-click="toggleSelectItem(option)">
@@ -35,7 +35,7 @@
     </a>
   </div>
 </div>
-<div ng-if="!option.isPack">
+<div ng-if="!option.isPack" class="col-xs-12 col-md-6">
   <div
     class="opt-data"
     ng-click="toggleSelectItem(option)">
