--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
   <script src="avUi/avUi.js" class="app"></script>
   <script src="avUi/jquery.flash.js" class="app"></script>
   <script src="avUi/affix-bottom-directive.js" class="app"></script>
+  <script src="avUi/affix-top-offset-directive.js" class="app"></script>
   <script src="avUi/affix-top-directive.js" class="app"></script>
   <script src="avUi/collapsing-directive.js" class="app"></script>
   <script src="avUi/recompile-directive.js" class="app"></script>
