--- a/avBooth/draft-options-directive/draft-options-directive.html
+++ b/avBooth/draft-options-directive/draft-options-directive.html
@@ -1,7 +1,7 @@
 <div avb-draft-option
   ng-repeat="option in filteredOptions"
   class="animate-repeat"
-  ng-class="{selected: option.selected > -1}">
+  ng-class="{selected: option.isSelected}">
 </div>
 <div
   class="animate-repeat padded-left"
