--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
   <script src="avBooth/busy-directive/busy-directive.js" class="app"></script>
   <script src="avBooth/casting-ballot-screen-directive/casting-ballot-screen-directive.js" class="app"></script>
   <script src="avBooth/draft-option-directive/draft-option-directive.js" class="app"></script>
+  <script src="avBooth/draft-option-cell-directive/draft-option-cell-directive.js" class="app"></script>
   <script src="avBooth/draft-options-directive/draft-options-directive.js" class="app"></script>
   <script src="avBooth/simple-option-directive/simple-option-directive.js" class="app"></script>
   <script src="avBooth/simple-selected-option-directive/simple-selected-option-directive.js" class="app"></script>
@@ -93,6 +94,7 @@
   <script src="avBooth/start-screen-directive/start-screen-directive.js" class="app"></script>
   <script src="avBooth/success-screen-directive/success-screen-directive.js" class="app"></script>
   <script src="avBooth/selected-options-filter.js" class="app"></script>
+  <script src="avBooth/has-selected-options-filter.js" class="app"></script>
   <script src="test/test.js" class="app"></script>
   <!-- for security, we do not include the dynamic directive in the app,
        so in the compiled app e2e tests are not expected work. -->
