adding some cell selection style and logic

--- a/avBooth/draft-option-cell-directive/draft-option-cell-directive.html
+++ b/avBooth/draft-option-cell-directive/draft-option-cell-directive.html
@@ -9,7 +9,7 @@
   class="has-data"
   ng-if="opt !== null"
   ng-class="{selected: opt.selected > -1}"
-  ng-click="selectCell()">
+  ng-click="toggleCell()">
   <span
     ng-if="opt.selected === -1"
     ng-i18next="avBooth.clickToSelectCell">
