show indivisible label

--- a/avBooth/draft-option-directive/draft-option-directive.html
+++ b/avBooth/draft-option-directive/draft-option-directive.html
@@ -7,7 +7,11 @@
       <span ng-i18next="avBooth.removeSelectedItem"></span>
       <span class="glyphicon glyphicon-remove"></span>
     </div>
-    <span class="label label-default" ng-i18next="avBooth.packLabel"></span>
+    <span
+      class="label label-default"
+      ng-i18next="avBooth.packLabel"
+      ng-if="option.isPack">
+    </span>
     <p class="details">{{option.details}}</p>
   </div>
   <button
